--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url = jdbc:postgresql://localhost:54320/library_umcs
 spring.datasource.username = postgres
 spring.datasource.password = wiola
 
-#spring.jpa.generate-ddl = true
+spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl-auto = create
 #spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
